--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     Chat App
-    <button id="increment">+1</button>
+
+    <form id="chat-form">
+      <input type="text" name="message" id="chat-input" />
+      <button type="submit" id="chat-button"></button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
