Allow users to share location

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
 
     <form id="chat-form">
       <input type="text" name="message" id="chat-input" />
-      <button type="submit" id="chat-button"></button>
+      <button type="submit" id="chat-button">Send Message</button>
     </form>
+
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
